# digital_floats_control

./: .gitignore  CMakeLists.txt  Readme.md  firmware_uploader.py  openocd.cfg  toolchain.cmake  version.sh
application/: CMakeLists.txt  STM32F103XB_FLASH.ld
application/app/: application.cpp  application.h  control_channel.cpp  control_channel.h  main.cpp
application/bsp/stm32f103/: bsp.cpp  bsp.h
bootloader/: CMakeLists.txt  STM32F103XB_FLASH.ld
bootloader/app/: main.cpp  protocol.h
bootloader/bsp/stm32f103/: bsp.cpp  bsp.h
common/: CMakeLists.txt
common/arch/stm32f103/: CMakeLists.txt
common/arch/stm32f103/CMSIS/: CMakeLists.txt
common/arch/stm32f103/abstraction/: CMakeLists.txt  flash.cpp  flash.h  gpio.cpp  gpio.h  i2c_master.cpp  i2c_master.h  pwm_dma.cpp  pwm_dma.h  spi.cpp  spi.h  uart.cpp  uart.h
common/arch/stm32f103/stm32f1xx_hal_driver/: CMakeLists.txt
common/arch/stm32f103/stm32f1xx_hal_driver/Inc/: stm32f1xx_hal_conf.h
common/bsp/stm32f103/: CMakeLists.txt  bsp.cpp  bsp.h
common/drivers/: CMakeLists.txt  ina219.cpp  ina219.h  pcf8574.cpp  pcf8574.h  w25x_flash.cpp  w25x_flash.h  ws2812.h
common/itf/drivers/: iflash.h
common/itf/hal/: CMakeLists.txt  igpio.h  ii2c_master.h  ipwm_dma.h  ispi.h  iuart.h
common/sup/: CMakeLists.txt  base64.cpp  base64.h  bit_mask.h  colors.h  logger.h  protocol2.h  ring_buffer.h  settings.h
doc/: Doxyfile.in
pc_app/: bootloader_protocol.py  com_port.py  firmware_upload.py  main.py  main.spec  protocol.py
pc_app/widgets/: auto_detect.py  channel_settings.py  channel_settings_table.py  com_port_widget.py  firmware_upload.py  logs_frame_widget.py  monitoring_data.py  monitoring_frame_widget.py  monitoring_table.py  release.py  settings_frame_widget.py  status_frame_widget.py  table_widget.py  user_settings.py
